[project]
name = "code-agent"
version = "0.1.0"
description = "CLI 编程 Agent - 基于 ReAct 模式的代码助手"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
code-agent = "code_agent.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"